--- a/front-mjail/src/app/mail-list/mail-list.component.scss
+++ b/front-mjail/src/app/mail-list/mail-list.component.scss
@@ -32,6 +32,10 @@ $secondaryBackgroundColor: #FBFBFF;
     button.btn {
         margin: 0px 5px 2px;
     }
+    
+    .input-group button.btn {
+        margin: 0px;
+    }
 
     .logo {
 
