fixes #4 favicon refs #12 change window title according to current tab/unread messages count missing for delete + deleteByUser + clean

--- a/front-mjail/src/app/mail-list/mail-list.component.html
+++ b/front-mjail/src/app/mail-list/mail-list.component.html
@@ -2,9 +2,9 @@
     <div class="panelLeft col-sm-6">
 
 
-        <div id="headerBar">
+        <div id="headerBar" style="background: white">
             <div class="logo pull-left">
-                <span>Ɱ</span>ail
+                <span>Ɱ</span>
             </div>
             
             <div class="actions pull-right form-inline" style="white-space: nowrap">
