fixes #4 Favicon: revert deleted code for screenshot

--- a/front-mjail/src/app/mail-list/mail-list.component.html
+++ b/front-mjail/src/app/mail-list/mail-list.component.html
@@ -2,9 +2,9 @@
     <div class="panelLeft col-sm-6">
 
 
-        <div id="headerBar" style="background: white">
+        <div id="headerBar">
             <div class="logo pull-left">
-                <span>Ɱ</span>
+                <span>Ɱ</span>ail
             </div>
             
             <div class="actions pull-right form-inline" style="white-space: nowrap">
