fixes #6 improve keyboard nav

--- a/front-mjail/src/app/mail-list/mail-list.component.html
+++ b/front-mjail/src/app/mail-list/mail-list.component.html
@@ -8,22 +8,18 @@
             </div>
             
             <div class="actions pull-right form-inline" style="white-space: nowrap">
-                <div class="input-group">
-                    <input placeholder="Search.." 
-                           type="text" 
-                           class="form-control" 
-                           [value]="searchTmp" 
-                           (input)="searchTmp = $event.target.value;"
-                           (keyup)="$event.keyCode == 13 && applySearch()"
-                    >
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button" (click)="applySearch()" [disabled]="searchTmp == ''"><i class="fa fa-search"></i></button>
-                    </div>
-                </div> 
-                <button class="btn btn-warning" (click)="selectionDelete()" [disabled]="(mails | filter : 'selected' : true).length == 0">Delete</button>
+
+                <input placeholder="Search.." 
+                       type="text" 
+                       class="form-control" 
+                       [value]="search"
+                       (input)="search = $event.target.value; applyFilter()"
+                >
+                <button class="btn btn-warning" (click)="selectionDelete()" [disabled]="(filteredMails | filter : 'selected' : true).length == 0">Delete</button>
                 <button class="btn btn-danger" (click)="deleteAll()">Delete All</button>
-                <button class="btn btn-dark" (click)="selectionSetUnread()" [disabled]="(mails | filter : 'selected' : true).length == 0">Set unread</button>
-                <button class="btn btn-success" (click)="selectionSetRead()" [disabled]="(mails | filter : 'selected' : true).length == 0">Set read</button>
+                <button class="btn btn-dark" (click)="selectionSetUnread()" [disabled]="(filteredMails | filter : 'selected' : true).length == 0">Set unread</button>
+                <button class="btn btn-success" (click)="selectionSetRead()" [disabled]="(filteredMails | filter : 'selected' : true).length == 0">Set read</button>
+                <button class="btn" (click)="applyFilter()">Apply filter</button>
             </div>
             <br clear="both" />
         </div>
@@ -52,7 +48,7 @@
                         </thead>
 
                         <tbody>
-                            <tr *ngFor="let mail of mails | filter : 'user' : user | mailSearch : search" 
+                            <tr *ngFor="let mail of filteredMails" 
                                 [class.isNew]="!mail.read"
                                 [class.isSelected]="mail.selected"
                                 (click)="mailClick(mail, $event)"
