Isolation d'une boite par lien

--- a/front-mjail/src/app/mail-list/mail-list.component.html
+++ b/front-mjail/src/app/mail-list/mail-list.component.html
@@ -3,9 +3,9 @@
 
 
         <div id="headerBar">
-            <div class="logo pull-left">
+            <a routerLink="/" class="logo pull-left">
                 <span>Ɱ</span>ail
-            </div>
+            </a>
 
             <div class="actions pull-right form-inline" style="white-space: nowrap">
 
