--- a/front-mjail/src/app/mail-view/mail-view.component.html
+++ b/front-mjail/src/app/mail-view/mail-view.component.html
@@ -40,13 +40,13 @@
             <div *ngIf="(mail.attachments | exclude : 'contentDisposition' : 'inline' ).length">
                 <b>Attachments: </b>
                 <span *ngFor="let att of mail.attachments | exclude : 'contentDisposition' : 'inline'; last as isLast">
-                    <a target="_blank" href="{{generateAttachmentLink(mail._id, att.contentId, att.fileName)}}">{{att.fileName}}</a> ({{att.length | sizeConvert}})<span *ngIf="!isLast">, </span>
+                    <a target="_blank" href="{{generateAttachmentLink(mail.id, att.contentId, att.fileName)}}">{{att.fileName}}</a> ({{att.length | sizeConvert}})<span *ngIf="!isLast">, </span>
                 </span>
             </div>
             <div *ngIf="(mail.attachments | filter : 'contentDisposition' : 'inline' ).length">
                 <b>Inline Attachments: </b>
                 <span *ngFor="let att of mail.attachments | filter : 'contentDisposition' : 'inline'; last as isLast">
-                    <a target="_blank" href="{{generateAttachmentLink(mail._id, att.contentId, att.fileName)}}">{{att.fileName}}</a> ({{att.length | sizeConvert}})<span *ngIf="!isLast">, </span>
+                    <a target="_blank" href="{{generateAttachmentLink(mail.id, att.contentId, att.fileName)}}">{{att.fileName}}</a> ({{att.length | sizeConvert}})<span *ngIf="!isLast">, </span>
                 </span>
             </div>
         </div>
