--- a/front-mjail/src/app/mail-view/mail-view.component.html
+++ b/front-mjail/src/app/mail-view/mail-view.component.html
@@ -86,7 +86,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let header of mail.headers">
+                                    <tr *ngFor="let header of mail.header">
                                         <td>{{header.name}}</td>
                                         <td>{{header.value}}</td>
                                     </tr>
