correction affichage dropdown et liste de mails

--- a/front-mjail/src/app/mail-list/mail-list.component.html
+++ b/front-mjail/src/app/mail-list/mail-list.component.html
@@ -12,7 +12,7 @@
                     <button title="Paramètres" class="btn btn-light dropdown-toggle" type="button" id="settings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fa fa-cog"></i>
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="settings">
+                    <div class="dropdown-menu" aria-labelledby="settings" style="height:200px;overflow-y: auto">
                       <li class="dropdown-item"  (click)="userSettings(user, $event)" *ngFor="let user of blacklistUsers">
                         {{user ? user : 'Anonymous'}}
                         <span class="fa {{blacklist[user] == 1 ? 'fa-times' : 'fa-check'}}"></span>
