--- a/front-mjail/src/app/mail-list/mail-list.component.scss
+++ b/front-mjail/src/app/mail-list/mail-list.component.scss
@@ -66,6 +66,8 @@ $secondaryBackgroundColor: #FBFBFF;
             text-shadow: 0px 0px 3px #2F9BE8;
         }
 
+        margin-left: 10px;
+
     }
 
     .logo-m:hover {
